2016-01-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: Remove line accidentally added on 2016-01-13.

2016-01-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (gc_file_buffers_and_nodes): Don't free file 
	buffers corresponding to files that aren't there any more, 
	because a node may still refer to them.
	* info/nodes.c (forget_info_file): Overwrite filename of field 
	with empty string to avoid a memory leak.

2016-01-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_node_of_tag_ext): Check that references for 
	node haven't already been initialized before calling 
	scan_node_contents, to prevent a memory leak if a node from a 
	previously garbage collected file is loaded again.

2016-01-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Clear cache 
	variable with 'unset'.

2016-01-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Check if using Windows, and 
	if so, bypass 'locale -a' check for a UTF-8 locale.

2016-01-23  Karl Berry  <karl@freefriends.org>

	* contrib/perldoc-all/GNUmakefile (install): no need for grep,
	since we don't install the split HTML any more.
	($(texi_pod_doc_incl)): mention failure to get uniprops et al.

2016-01-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/lib,
	* tp/Texinfo/Convert/XSParagraph/m4: Add gnulib module 'getline'.

	* tp/Texinfo/Convert/XSParagraph/Makefile.am (AM_CPPFLAGS): 
	Change to right path to include directories.

2016-01-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Add a check for a UTF-8 
	locale in output of "locale -a".  Change 'stand-alone' to 
	'standalone' in a string.  Remove some commented-out code.
	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_init): If we 
	fail to set a UTF-8 locale by other means, look at the output of 
	"locale -a" and use the first line of output with "UTF-8" in it 